@@ -1,4 +1,7 @@
 {{$NEXT}}
+    * Big bug fix in basic behaviour
+    * Handle zombies
+    * Remove some stray unconditional logging
 
 1.161170  2016-04-26 16:06:34-07:00 America/Los_Angeles
     * Initial release
